src/codegen/snapshots/simpl__codegen__test__compile_fn.snap
---
source: src/codegen/test.rs
expression: module.print_to_string().to_string()
---
; ModuleID = 'test_compile'
source_filename = "test_compile"

define i64 (i1)* @toplevel() {
entry:
  ret i64 (i1)* @lambda
}

define i64 @lambda(i1 %b) {
lambda_entry:
  %b1 = alloca i1
  store i1 %b, i1* %b1
  %b2 = load i1, i1* %b1
  %cmp = icmp eq i1 %b2, true
  br i1 %cmp, label %then, label %else

then:                                             ; preds = %lambda_entry
  br label %cont

else:                                             ; preds = %lambda_entry
  br label %cont

cont:                                             ; preds = %else, %then
  %phi = phi i64 [ 100, %then ], [ 200, %else ]
  ret i64 %phi
}

