src/codegen/snapshots/simpl__codegen__test__compile_if.snap
---
source: src/codegen/test.rs
expression: module.print_to_string().to_string()
---
; ModuleID = 'test_compile'
source_filename = "test_compile"

define i64 @toplevel() {
toplevel_entry:
  br i1 true, label %then, label %else

then:                                             ; preds = %toplevel_entry
  br label %cont

else:                                             ; preds = %toplevel_entry
  br label %cont

cont:                                             ; preds = %else, %then
  %phi = phi i64 [ 100, %then ], [ 200, %else ]
  ret i64 %phi
}

